# Quant-trading-journey

./: .gitignore  README.md  index.ipynb  pyproject.toml
Phase-0/: Basic financial analysis.ipynb
data/: spy.pkl  tickers_20y.pkl
src/quant_utils/: data.py  perf.py
